Fix buttons spacing and notification click trhough

--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -131,6 +131,7 @@ small.by {
 }
 
 .fadeout {
+    pointer-events: none;
     position: relative;
     margin-bottom: -2em;
     bottom: 2em;
